[tool.poetry]
name = "sample-project"
version = "0.1.0"
description = "testing workflows"
authors = ["Abhijeet"]
license = "none"

[tool.poetry.dependencies]
python = "^3.6"
flake8 = "^3.8.4"
pytest = "^6.1.1"
pytest-cov = "^2.10.1"

[tool.poetry.dev-dependencies]
isort = "^5.6.4"
black = "^20.8b1"
autoflake = "^1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
